bin_PROGRAMS = endoor
endoor_SOURCES = bridge.c cli.c endoor.c estring.c log.c pcap.c protoaddr.c state.c tun.c thread.c json.c bstring.c
noinst_HEADERS = strlcpy.c bridge.h endoor.h estring.h log.h pcap.h protoaddr.h state.h tun.h thread.h json.h bstring.h cli.h
#AM_CFLAGS = -DSYSCONFDIR=\"$(sysconfdir)\"

